--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Solar Landing Page</title>
 </head>
 <body>
   
+
+  <script src="main.js"></script>
 </body>
 </html>
