--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
   <title>Solar Landing Page</title>
 </head>
 <body>
-  
+  <!-- hearder section -->
+    <header>
+      <nav class="container">
+        <img src="./assests/images/placeHolder.jpg" loading="lazy" alt="logo" class="logo" aria-label="company's Logo">
 
+          <!-- Hamburger Menu (Checkbox Hack) -->
+          <input type="checkbox" id="menu-toggle">
+          <label for="menu-toggle" class="menu-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+          </label>
+
+        
+          <ul class="nav-list" id="nav-list" aria-label="Main Navigation">
+            <li class="items active"><a href="#">Home</a></li>
+            <li class="items"><a href="#">Trade</a></li>
+            <li class="items"><a href="#">Shop</a></li>
+            <li class="items"><a href="#">Contact Us</a></li>
+          </ul>
+
+        <address class="header-contact">
+          <span>Call Us</span>
+          <a href="tel:+1 2345 3456 45">+1 2345 3456 45</a>
+        </address>
+      </nav>
+    </header>
   <script src="main.js"></script>
 </body>
 </html>
