hero section styling with screen responsivness

--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
         </address>
       </nav>
     </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-container container">
+      <div class="hero-content">
+        <div class="paginationBar">
+          <span class="page-numbering">01</span>
+          <span class="line-soft"></span>
+          <span class="page-numbering">04</span>
+        </div>
+        <h1 class="heading1">Solar Panel Installers In<br>Plymouth</h1>
+        <p class="hero-paragraph">Fueled is an award-winning technology consultancy that transforms businesses by generating ideas, building products, and accelerating growth.</p>
+        <div class="btns">
+          <button class="btn btn1">Call Us Today</button>
+          <button class="btn btn2">Request a call back</button>
+        </div>
+      </div>
+      
+    </div>
+  </section>
   <script src="main.js"></script>
 </body>
 </html>
