section 3 styling and screen reponsiveness

--- a/index.html
+++ b/index.html
@@ -54,6 +54,47 @@
       
     </div>
   </section>
+
+  <!-- Section 2 -->
+  <section class="section2">
+    <div class="container">
+      <div class="section2-content">
+        <div>
+          <div class="text">
+            <h1>The Friendliest Installers in the South-West</h1>
+            <p>At Solidarity Solar our aims are to help our customers towards a sustainable future and genuinely care about the quality of products we use for our installs. We never sell you equipment you don't need and will always advise to the best of our ability, No hard sell or pushy sales tactics ever. We take pride in our work and do our best to make sure that we meet, or exceed, our customers' expectations.</p>
+          </div>
+            <ol class="list">
+              <li>Collaborate with 100+ leading</li>
+              <li> 100+ leading universities and companies</li>
+              <li> leading universities and companies</li>
+              <li> universities and companies</li>
+            </ol>
+        </div>
+        <div>
+          <img src="./assests/images/solarwithearth.png" alt="image solar" loading="lazy" class="solar-image">
+          <div class="side-solar-image">
+            <img src="./assests/svg/solarCharging.svg" alt="">
+            <p>The Piece That Sold Me On This Polarizing Trend</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 3 -->
+    <section class="section3">
+      <div class="container">
+        <div class="section3-content">
+          <h1>Power that Doesn't Cost the Earth</h1>
+          <p>If you need advice then give us a call on 07745593882 or hit the button below to request a call back!</p>
+          <button>Call Us Today</button>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
   <script src="main.js"></script>
 </body>
 </html>
