section 4 styling and screen responsiveness

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css">
   <title>Solar Landing Page</title>
 </head>
@@ -91,9 +93,46 @@
           <button>Call Us Today</button>
           </div>
         </div>
-      </div>
-
     </section>
+
+    <!-- Section 4 -->
+      <section  class="section4">
+        <div class="section4-container">
+          <div class="section4-content">
+            <div class="section4-text">
+              <h1>Solar Kits</h1>
+              <p>Complete solar system kits, ready for installation. They can be used to supplement on-grid housing, a complete self-sustaining home or some combination of the two.</p>
+            </div>
+
+            <div class="cards">
+              <div>
+                <img src="./assests/images/green-energy1.png" alt="" loading="lazy">
+                <div class="card-content">
+                  <h2>Off Grid</h2>
+                  <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
+                  <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+              <div>
+                <img src="./assests/images/solar-with-photovoltaic.png" alt="" loading="lazy">
+                <div class="card-content">
+                  <h2>On Grid</h2>
+                  <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
+                  <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+              <div>
+                <img src="./assests/images/green-energy2.png" alt="" loading="lazy">
+                <div class="card-content">
+                  <h2>Hybrid</h2>
+                  <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
+                  <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
   <script src="main.js"></script>
 </body>
