--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
         </div>
       </section>
 
+      <!-- section 5 -->
+        <section class="section5">
+            <div class="section5-content">
+              <h1>Repairs Over Replacement</h1>
+              <p>We approach every aspect of our business with sustainability in mind. That's why we believe it's always worth trying to fix a system before outright replacing it, wherever possible – it requires fewer materials and is easier on the planet, as well as your wallet! If another company tells you that your system needs to be replaced, just give us a call and we'll see if we can repair it first.</p>
+            </div>
+
+        </section>
+
   <script src="main.js"></script>
 </body>
 </html>
