section 6 and its screen responsiveness

--- a/index.html
+++ b/index.html
@@ -140,6 +140,77 @@
               <h1>Repairs Over Replacement</h1>
               <p>We approach every aspect of our business with sustainability in mind. That's why we believe it's always worth trying to fix a system before outright replacing it, wherever possible – it requires fewer materials and is easier on the planet, as well as your wallet! If another company tells you that your system needs to be replaced, just give us a call and we'll see if we can repair it first.</p>
             </div>
+        </section>
+
+        <!-- Section 6 -->
+        <section class="section6">
+          <div class="container">
+            <div class="section6-content">
+
+              <!-- left side -->
+              <div>
+                <div class="card-icon">
+                  <img src="./assests/svg/fast-energy.svg" alt="">
+                </div>
+                <h1>Energy Innovators - the products we love</h1>
+                <p>Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse tempor et ipsum sit egestas nunc. Diam in cum a in.</p>
+            </div>
+
+            <!-- right side cards -->
+            <div class="cards">
+              <div>
+                <div class="card-img">
+                  <img src="./assests/images/placeHolder.jpg" alt="">
+                </div>
+                
+                <div class="text">
+                  <h2>SoliTek - The European Manufacturer of Solar Panels</h2>
+                  <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
+                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+
+              <div>
+                <div class="card-img">
+                  <img src="./assests/images/placeHolder.jpg" alt="">
+                </div>
+
+                <div  class="text">
+                  <h2>Sunsynk - No Power No Problem</h2>
+                  <p>Sunsynk build the most versatile hybrid inverter on the market, designed to take up to 7kW of solar on a standard domestic supply - for simultaneous battery charging and household usage.</p>
+                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+
+              <div>
+                <div class="card-img">
+                  <img src="./assests/images/placeHolder.jpg" alt="">
+                </div>
+
+                <div class="text">
+                  <h2>BYD - Electrifying Transport</h2>
+                  <p>We use battery cells made by BYD, a market leader in lithium batteries. BYD batteries are in cars, trucks, and buses - they build robust batteries.</p>
+                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+
+              <div>
+                <div class="card-img">
+                  <img src="./assests/images/placeHolder.jpg" alt="">
+                </div>
+
+                <div  class="text">
+                  <h2>REC - Solar's Most Trusted</h2>
+                  <p>REC - Renewable Energy Corporation, are one of the longest trading names in solar. They know how to be truly sustainable in this industry - their panels are 100% lead free and have the most trusted warranty in solar.</p>
+                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+
+
+            </div>
+
+          </div>
+          
 
         </section>
 
