section 7 and its responsiveness

--- a/index.html
+++ b/index.html
@@ -95,125 +95,194 @@
         </div>
     </section>
 
-    <!-- Section 4 -->
-      <section  class="section4">
-        <div class="section4-container">
-          <div class="section4-content">
-            <div class="section4-text">
-              <h1>Solar Kits</h1>
-              <p>Complete solar system kits, ready for installation. They can be used to supplement on-grid housing, a complete self-sustaining home or some combination of the two.</p>
-            </div>
+  <!-- Section 4 -->
+    <section  class="section4">
+      <div class="section4-container">
+        <div class="section4-content">
+          <div class="section4-text">
+            <h1>Solar Kits</h1>
+            <p>Complete solar system kits, ready for installation. They can be used to supplement on-grid housing, a complete self-sustaining home or some combination of the two.</p>
+          </div>
 
-            <div class="cards">
-              <div>
-                <img src="./assests/images/green-energy1.png" alt="" loading="lazy">
-                <div class="card-content">
-                  <h2>Off Grid</h2>
-                  <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
-                  <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
+          <div class="cards">
+            <div>
+              <img src="./assests/images/green-energy1.png" alt="" loading="lazy">
+              <div class="card-content">
+                <h2>Off Grid</h2>
+                <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
+                <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
               </div>
-              <div>
-                <img src="./assests/images/solar-with-photovoltaic.png" alt="" loading="lazy">
-                <div class="card-content">
-                  <h2>On Grid</h2>
-                  <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
-                  <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
+            </div>
+            <div>
+              <img src="./assests/images/solar-with-photovoltaic.png" alt="" loading="lazy">
+              <div class="card-content">
+                <h2>On Grid</h2>
+                <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
+                <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
               </div>
-              <div>
-                <img src="./assests/images/green-energy2.png" alt="" loading="lazy">
-                <div class="card-content">
-                  <h2>Hybrid</h2>
-                  <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
-                  <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
+            </div>
+            <div>
+              <img src="./assests/images/green-energy2.png" alt="" loading="lazy">
+              <div class="card-content">
+                <h2>Hybrid</h2>
+                <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
+                <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- section 5 -->
-        <section class="section5">
-            <div class="section5-content">
-              <h1>Repairs Over Replacement</h1>
-              <p>We approach every aspect of our business with sustainability in mind. That's why we believe it's always worth trying to fix a system before outright replacing it, wherever possible – it requires fewer materials and is easier on the planet, as well as your wallet! If another company tells you that your system needs to be replaced, just give us a call and we'll see if we can repair it first.</p>
-            </div>
-        </section>
+  <!-- section 5 -->
+    <section class="section5">
+        <div class="section5-content">
+          <h1>Repairs Over Replacement</h1>
+          <p>We approach every aspect of our business with sustainability in mind. That's why we believe it's always worth trying to fix a system before outright replacing it, wherever possible – it requires fewer materials and is easier on the planet, as well as your wallet! If another company tells you that your system needs to be replaced, just give us a call and we'll see if we can repair it first.</p>
+        </div>
+    </section>
 
-        <!-- Section 6 -->
-        <section class="section6">
-          <div class="container">
-            <div class="section6-content">
+  <!-- Section 6 -->
+  <section class="section6">
+    <div class="container">
+      <div class="section6-content">
 
-              <!-- left side -->
-              <div>
-                <div class="card-icon">
-                  <img src="./assests/svg/fast-energy.svg" alt="">
-                </div>
-                <h1>Energy Innovators - the products we love</h1>
-                <p>Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse tempor et ipsum sit egestas nunc. Diam in cum a in.</p>
-            </div>
+        <!-- left side -->
+        <div>
+          <div class="card-icon">
+            <img src="./assests/svg/fast-energy.svg" alt="">
+          </div>
+          <h1>Energy Innovators - the products we love</h1>
+          <p>Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse tempor et ipsum sit egestas nunc. Diam in cum a in.</p>
+      </div>
 
-            <!-- right side cards -->
-            <div class="cards">
-              <div>
-                <div class="card-img">
-                  <img src="./assests/images/placeHolder.jpg" alt="">
-                </div>
-                
-                <div class="text">
-                  <h2>SoliTek - The European Manufacturer of Solar Panels</h2>
-                  <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
-                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-              </div>
-
-              <div>
-                <div class="card-img">
-                  <img src="./assests/images/placeHolder.jpg" alt="">
-                </div>
-
-                <div  class="text">
-                  <h2>Sunsynk - No Power No Problem</h2>
-                  <p>Sunsynk build the most versatile hybrid inverter on the market, designed to take up to 7kW of solar on a standard domestic supply - for simultaneous battery charging and household usage.</p>
-                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-              </div>
-
-              <div>
-                <div class="card-img">
-                  <img src="./assests/images/placeHolder.jpg" alt="">
-                </div>
-
-                <div class="text">
-                  <h2>BYD - Electrifying Transport</h2>
-                  <p>We use battery cells made by BYD, a market leader in lithium batteries. BYD batteries are in cars, trucks, and buses - they build robust batteries.</p>
-                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-              </div>
-
-              <div>
-                <div class="card-img">
-                  <img src="./assests/images/placeHolder.jpg" alt="">
-                </div>
-
-                <div  class="text">
-                  <h2>REC - Solar's Most Trusted</h2>
-                  <p>REC - Renewable Energy Corporation, are one of the longest trading names in solar. They know how to be truly sustainable in this industry - their panels are 100% lead free and have the most trusted warranty in solar.</p>
-                  <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-              </div>
-
-
-            </div>
-
+      <!-- right side cards -->
+      <div class="cards">
+        <div>
+          <div class="card-img">
+            <img src="./assests/images/placeHolder.jpg" alt="">
           </div>
           
+          <div class="text">
+            <h2>SoliTek - The European Manufacturer of Solar Panels</h2>
+            <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
+            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
 
-        </section>
+        <div>
+          <div class="card-img">
+            <img src="./assests/images/placeHolder.jpg" alt="">
+          </div>
 
+          <div  class="text">
+            <h2>Sunsynk - No Power No Problem</h2>
+            <p>Sunsynk build the most versatile hybrid inverter on the market, designed to take up to 7kW of solar on a standard domestic supply - for simultaneous battery charging and household usage.</p>
+            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
+
+        <div>
+          <div class="card-img">
+            <img src="./assests/images/placeHolder.jpg" alt="">
+          </div>
+
+          <div class="text">
+            <h2>BYD - Electrifying Transport</h2>
+            <p>We use battery cells made by BYD, a market leader in lithium batteries. BYD batteries are in cars, trucks, and buses - they build robust batteries.</p>
+            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
+
+        <div>
+          <div class="card-img">
+            <img src="./assests/images/placeHolder.jpg" alt="">
+          </div>
+
+          <div  class="text">
+            <h2>REC - Solar's Most Trusted</h2>
+            <p>REC - Renewable Energy Corporation, are one of the longest trading names in solar. They know how to be truly sustainable in this industry - their panels are 100% lead free and have the most trusted warranty in solar.</p>
+            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 7 -->
+    <section class="section7">
+      <div class="section7-container">
+        <div class="section7-content">
+          <div class="section7-text">
+            <h1>Our values</h1>
+            <p>More than 3000 users have been helped by World Online Course.</p>
+          </div>
+
+          <!-- cards -->
+          <div class="cards">
+            <div>
+              <img src="./assests/svg/customer-loyalty.svg" alt="">
+              <h2>Customer Care</h2>
+              <p>We're here to help you with solar panel installation in Devon and Cornwall. If we were to sum ourselves up in a few words, those would be "reliable, honest and friendly." We find our customers agree! We're with you from the start of the project to the finish.</p>
+            </div>
+
+            <div>
+              <img src="./assests/svg/price-tag.svg" alt="">
+              <h2>Price</h2>
+              <p>As I'm sure you'll have seen, solar systems don't tend to come cheap. Our aim is to make solar power accessible to everyone, so we price ourselves in a way that makes solar energy more affordable. We're focused on helping you and on helping the environment, rather than on turning a profit.</p>
+            </div>
+
+            <div>
+              <img src="./assests/svg/Enviroment.svg" alt="">
+              <h2>Sustainability</h2>
+              <p>As we've said, we do this because we truly care about the planet and about seeing people embrace a greener, more eco-friendly approach to power. The world of green energy can be jargon-filled and opaque, so we want to help educate people on the big and little things they can do to protect our planet!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Section 8 -->
+  <section class="section8">
+    <div class="container">
+      <div class="section8-content">
+        <div class="section8-text">
+          <img src="./assests/svg/marks.svg" alt="">
+          <h1>what they say about WOC</h1>
+          <p>More than 3000 users have been helped by World Online Course.</p>
+        </div>
+
+        <!-- testimolines -->
+        <div>
+          <div>
+            <span>What they say</span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
+          <div>
+            <p>“Studying at WOC is fun, the curriculum is complete, the instructors are competent, and the assignments given are also relevant to the current scope of work.”</p>
+          </div>
+
+          <div>
+            <!-- <img src="./assests/images/testimolins.png" alt=""> -->
+            <div>
+              <p>Resky Fernanda</p>
+              <p>Product Designer at Tokopedia</p>
+            </div>
+
+            <div>
+              <i class="fa-thin fa-circle-left"></i>
+              <i class="fa-thin fa-circle-right"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="main.js"></script>
 </body>
 </html>
