section 8 with screen responsiveness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
   <link rel="stylesheet" href="styles.css">
   <title>Solar Landing Page</title>
 </head>
@@ -110,7 +113,7 @@
               <div class="card-content">
                 <h2>Off Grid</h2>
                 <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
-                <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
+                <button>View Products<i class="ri-arrow-right-line"></i></button>
               </div>
             </div>
             <div>
@@ -118,7 +121,7 @@
               <div class="card-content">
                 <h2>On Grid</h2>
                 <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
-                <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
+                <button>View Products<i class="ri-arrow-right-line"></i></button>
               </div>
             </div>
             <div>
@@ -126,7 +129,7 @@
               <div class="card-content">
                 <h2>Hybrid</h2>
                 <p>WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,</p>
-                <button>View Products<i class="fa-solid fa-arrow-right"></i></button>
+                <button>View Products<i class="ri-arrow-right-line"></i></button>
               </div>
             </div>
           </div>
@@ -166,7 +169,7 @@
           <div class="text">
             <h2>SoliTek - The European Manufacturer of Solar Panels</h2>
             <p>We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.</p>
-            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+            <button>View integration<i class="ri-arrow-right-line"></i></button>
           </div>
         </div>
 
@@ -178,7 +181,7 @@
           <div  class="text">
             <h2>Sunsynk - No Power No Problem</h2>
             <p>Sunsynk build the most versatile hybrid inverter on the market, designed to take up to 7kW of solar on a standard domestic supply - for simultaneous battery charging and household usage.</p>
-            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+            <button>View integration<i class="ri-arrow-right-line"></i></button>
           </div>
         </div>
 
@@ -190,7 +193,7 @@
           <div class="text">
             <h2>BYD - Electrifying Transport</h2>
             <p>We use battery cells made by BYD, a market leader in lithium batteries. BYD batteries are in cars, trucks, and buses - they build robust batteries.</p>
-            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+            <button>View integration<i class="ri-arrow-right-line"></i></button>
           </div>
         </div>
 
@@ -202,7 +205,7 @@
           <div  class="text">
             <h2>REC - Solar's Most Trusted</h2>
             <p>REC - Renewable Energy Corporation, are one of the longest trading names in solar. They know how to be truly sustainable in this industry - their panels are 100% lead free and have the most trusted warranty in solar.</p>
-            <button>View interation<i class="fa-solid fa-arrow-right"></i></button>
+            <button>View integration<i class="ri-arrow-right-line"></i></button>
           </div>
         </div>
       </div>
@@ -253,14 +256,16 @@
         </div>
 
         <!-- testimolines -->
-        <div>
+        <div class="testimolines">
           <div>
-            <span>What they say</span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+            <h1>What they say</h1>
+            <div class="pagination">
+              <span class="active"></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
 
           <div>
@@ -268,16 +273,19 @@
           </div>
 
           <div>
-            <!-- <img src="./assests/images/testimolins.png" alt=""> -->
             <div>
-              <p>Resky Fernanda</p>
-              <p>Product Designer at Tokopedia</p>
+              <img src="./assests/images/testimolins.png" alt="">
+              <div>
+                <p>Resky Fernanda</p>
+                <p>Product Designer at Tokopedia</p>
+              </div>
             </div>
 
             <div>
-              <i class="fa-thin fa-circle-left"></i>
-              <i class="fa-thin fa-circle-right"></i>
+              <i class="ri-arrow-left-s-line"></i>
+              <i class="ri-arrow-right-s-line"></i>
             </div>
+
           </div>
         </div>
       </div>
