--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div>
             <div>
               <img src="./assests/images/testimolins.png" alt="">
-              <div>
+              <div class="text">
                 <p>Resky Fernanda</p>
                 <p>Product Designer at Tokopedia</p>
               </div>
@@ -291,6 +291,50 @@
       </div>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-section-1">
+          <div>
+            <img src="./assests/images/placeHolder.jpg" alt="">
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Customer Care</a></li>
+                <li><a href="#">Services</a></li>
+              </ul>
+          </div>
+
+          <div class="subscription">
+            <p>Get the latest news and updates from us.</p>
+            <form>
+              <input type="email" placeholder="Enter your email..." required>
+              <button type="submit">Subscribe</button>
+            </form>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="footer-section-2">
+          <ul>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Legal</a></li>
+          </ul>
+
+          <p>Copyright 2023 - Solidarity Solar Ltd</p>
+        </div>
+      </div>
+        
+    </div>
+      
+
+  </footer>
   <script src="main.js"></script>
 </body>
 </html>
