making changes in grids

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
       </div>
 
       <!-- right side cards -->
-      <div class="cards">
+      <div class="cards"> 
+        <!-- card 1 -->
         <div>
           <div class="card-img">
             <img src="./assests/images/placeHolder.jpg" alt="">
@@ -173,6 +174,7 @@
           </div>
         </div>
 
+        <!-- card 2 -->
         <div>
           <div class="card-img">
             <img src="./assests/images/placeHolder.jpg" alt="">
@@ -185,6 +187,7 @@
           </div>
         </div>
 
+        <!-- card 3 -->
         <div>
           <div class="card-img">
             <img src="./assests/images/placeHolder.jpg" alt="">
@@ -197,6 +200,7 @@
           </div>
         </div>
 
+        <!-- card 4 -->
         <div>
           <div class="card-img">
             <img src="./assests/images/placeHolder.jpg" alt="">
@@ -210,7 +214,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
 
   <!-- Section 7 -->
     <section class="section7">
@@ -223,18 +227,21 @@
 
           <!-- cards -->
           <div class="cards">
+            <!-- card 1 -->
             <div>
               <img src="./assests/svg/customer-loyalty.svg" alt="">
               <h2>Customer Care</h2>
               <p>We're here to help you with solar panel installation in Devon and Cornwall. If we were to sum ourselves up in a few words, those would be "reliable, honest and friendly." We find our customers agree! We're with you from the start of the project to the finish.</p>
             </div>
 
+            <!-- card 2 -->
             <div>
               <img src="./assests/svg/price-tag.svg" alt="">
               <h2>Price</h2>
               <p>As I'm sure you'll have seen, solar systems don't tend to come cheap. Our aim is to make solar power accessible to everyone, so we price ourselves in a way that makes solar energy more affordable. We're focused on helping you and on helping the environment, rather than on turning a profit.</p>
             </div>
 
+            <!-- card 3 -->
             <div>
               <img src="./assests/svg/Enviroment.svg" alt="">
               <h2>Sustainability</h2>
@@ -243,7 +250,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
 
   <!-- Section 8 -->
   <section class="section8">
@@ -290,7 +297,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
 
   <!-- Footer -->
   <footer>
@@ -307,7 +314,6 @@
                 <li><a href="#">Services</a></li>
               </ul>
           </div>
-
           <div class="subscription">
             <p>Get the latest news and updates from us.</p>
             <form>
@@ -316,9 +322,7 @@
             </form>
           </div>
         </div>
-
         <hr>
-
         <div class="footer-section-2">
           <ul>
             <li><a href="#">Terms & Conditions</a></li>
@@ -326,14 +330,10 @@
             <li><a href="#">Accessibility</a></li>
             <li><a href="#">Legal</a></li>
           </ul>
-
           <p>Copyright 2023 - Solidarity Solar Ltd</p>
         </div>
       </div>
-        
     </div>
-      
-
   </footer>
   <script src="main.js"></script>
 </body>
